[bugfix] correct spacing in status__content__spoiler

--- a/app/javascript/flavours/glitch/styles/gts/status/status-spoiler.scss
+++ b/app/javascript/flavours/glitch/styles/gts/status/status-spoiler.scss
@@ -1,4 +1,10 @@
 /* 🚥 Status: Spoiler link */
+
+.status__content__spoiler,
+.status__content__spoiler-link {
+    margin-block-start: var(--size-ui-gap);
+}
+
 .status__content__spoiler-link {
     --size-icon: 14px;
 
